--- a/index.html
+++ b/index.html
@@ -7,12 +7,24 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <style>
-    :root {}
-
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
+    }
+
+    .wrapper {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
     }
 
     html,
@@ -21,114 +33,386 @@
       height: 100%;
     }
 
-    .center {
-      width: 100%;
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-color: #f3f3f3;
-    }
-
-    .box {
-      width: 545px;
-      height: 545px;
-      border-radius: 50%;
-      background-color: rgba(0, 0, 0, 0.2);
-      border: 6px solid rgba(30, 191, 246, 0.9);
-      box-shadow: 0 0 26px rgba(30, 191, 246, 0.9), inset 0 0 26px rgba(30, 191, 246, 0.9);
-      transform: rotateX(72deg);
-    }
-
-    .tray_list {
-      width: 100%;
-      height: 100%;
+    .window {
       position: relative;
+      width: 600px;
+      height: 600px;
     }
 
-    .tray_item {
+    .polygon-bkg {
+      position: absolute;
+      left: 0;
+      top: 225px;
+      width: 100%;
+      height: 155px;
+      background: url(./images/round-background.svg) no-repeat center center;
+      background-size: 100% 100%;
+    }
+
+    .polygon-bkg2 {
+      position: absolute;
+      left: 50%;
+      top: 160px;
+      width: 480px;
+      height: 124px;
+      transform: translate(-50%, 0);
+      background: url(./images/round-background.svg) no-repeat center center;
+      background-size: 100% 100%;
+    }
+
+    .content {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+      z-index: 1;
+      -webkit-transform-style: preserve-3d;
+      transform-style: preserve-3d;
+      -webkit-transform-origin: center center -300px;
+      transform-origin: center center 0px;
+      transform: rotateX(75deg);
+    }
+
+    .round-pillar {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      /* background: url(./circle.svg) no-repeat center center; */
+      background-size: 100%;
+    }
+
+    .tray {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      /* border-radius: 50%;
+      background-color: rgba(0, 0, 0, 0.1);
+      border: 6px solid rgba(255, 0, 0, 1); */
+      transform: rotateX(0deg);
+    }
+
+    .content * {
+      -webkit-transform-style: preserve-3d;
+      transform-style: preserve-3d;
+    }
+
+    .round-circle {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      transform: rotateX(0deg) translate3d(0, 0, 80px);
+
+    }
+
+    .map-area {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      transform: rotateX(0deg) translate3d(0, 0, 190px);
+    }
+
+    .map-wrapper {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      transform: rotateX(15deg);
+    }
+
+    .map-div {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      transform: rotateX(270deg);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .map-center {
+      padding: 10px;
+    }
+
+    .map {
+      width: 200px;
+      height: 160px;
+      background-color: green;
+    }
+
+    .map-name {
+      line-height: 28px;
+      color: red;
+      font-size: 14px;
+      text-align: center;
+    }
+
+    .round-box {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      width: 80%;
+      height: 80%;
+      transform: translate3d(-50%, -50%, 0);
+
+      border-radius: 50%;
+      /* background: url(./circle.svg) no-repeat center center; */
+      background-size: 100%;
+      box-shadow: 0 0 18px 0px rgba(1, 191, 253, 0.5), inset 0 0 18px 0px rgba(1, 191, 253, 0.5);
+    }
+
+    .animation {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      animation: rotate 18s linear infinite;
+    }
+
+    .content:hover .animation {
+      animation-play-state: paused;
+    }
+
+    .round-circle .round-jo {
       width: 100%;
       height: 100%;
       position: absolute;
+      left: 0;
+      top: 0;
     }
 
-    .tray_item:nth-child(1) {
+    .round-jo:nth-child(1) {
       transform: rotateZ(0deg);
     }
 
-    .tray_item:nth-child(2) {
+    .round-jo:nth-child(2) {
       transform: rotateZ(72deg);
     }
 
-    .tray_item:nth-child(3) {
+    .round-jo:nth-child(3) {
       transform: rotateZ(144deg);
     }
 
-    .tray_item:nth-child(4) {
+    .round-jo:nth-child(4) {
       transform: rotateZ(216deg);
     }
 
-    .tray_item:nth-child(5) {
+    .round-jo:nth-child(5) {
       transform: rotateZ(288deg);
     }
 
-    .polygon {
+    .round-inner {
       position: absolute;
-      width: 120px;
-      height: 100px;
+      width: 106px;
+      height: 116px;
       left: 50%;
       top: 0;
-      transform: translate(-50%, 0px) rotateX(80deg);
-      background-color: red;
-      clip-path: polygon(20px 0, 100px 0, 120px 50px, 100px 100px, 20px 100px, 0 50px);
-      clip-path: url(#aaa)
+      transform: translate(-50%, -44px) rotateX(90deg);
+      transform-origin: center center -15px;
     }
 
-    .cnt {
+    .innner-reverse {
       position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      transform: rotateX(180deg);
+      overflow: hidden;
+    }
 
+    .polygon {
+      position: relative;
+      width: 103px;
+      height: 90px;
+      transform-origin: center center -50px;
+      overflow: hidden;
+      background: url(./images/wrapper.svg) no-repeat center center/100%;
+    }
+
+    .polygon-image {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background: url(./images/inner.svg) no-repeat center center;
+    }
+
+    .innner-reverse .text {
+      line-height: 24px;
+      text-align: center;
+      color: red;
+      font-size: 14px;
+      transform: rotateY(180deg);
+    }
+
+    @keyframes rotate {
+      0% {
+        transform: rotateZ(0deg)
+      }
+
+      100% {
+        transform: rotateZ(360deg)
+      }
     }
   </style>
+  <script>
+    function createPolyGon({ SvgHeight, SvgBorderWidth, strokeColor = "red" }) {
+      let svg = document.createElementNS("http://www.w3.org/2000/svg", "svg");
+      let createPath = (SH, SB) => {
+        //菱形存在规律
+        //长宽比：2/Math.sqrt(3)=1.154
+        const ratio = 2 / Math.sqrt(3);
+        let height = SH;//初始值高90
+        let borderHeight = SB //边框是4像素
+        let realHeight = height - borderHeight;
+        let halfBorder = borderHeight / 2;
+        let edge = halfHeight = (realHeight / 2) / (Math.sqrt(3) / 2);
+        let width = parseInt(ratio * height) + "";
+
+        let innerHTML = "";
+        innerHTML = `<path  d="M${halfBorder + edge / 2},${halfBorder}h${edge}l${edge / 2},${edge * Math.sqrt(3) / 2}l-${edge / 2},${edge * Math.sqrt(3) / 2}h-${edge}l-${edge / 2}-${edge * Math.sqrt(3) / 2}z" stroke-width="${borderHeight}" stroke="${strokeColor}" fill="none"></path>`;
+        return { innerHTML, height, width };
+      }
+      let wrapperPathObj = createPath(SvgHeight, SvgBorderWidth);
+      svg.innerHTML = wrapperPathObj.innerHTML;
+      svg.setAttribute("xmlns", "http://www.w3.org/2000/svg");
+      svg.setAttribute("height", wrapperPathObj.height);
+      svg.setAttribute("width", wrapperPathObj.width);
+      svg.style = "display:none";
+      document.body.appendChild(svg);
+    }
+
+    function createBkgSvg({ height = 155, width = 600, borderWidth = 4, strokeColor = "#00bffd" } = {}) {
+      let svg = document.createElementNS("http://www.w3.org/2000/svg", "svg");
+      let innerHTML = null, realWidth = null, realheight = null, halfBorder = borderWidth / 2;
+      svg.setAttribute("xmlns", "http://www.w3.org/2000/svg", "svg");
+      svg.setAttribute("height", height);
+      svg.setAttribute("width", width);
+      svg.style = "display:none";
+      realWidth = (width - borderWidth) / 2;
+      realHeight = (height - borderWidth) / 2;
+
+      innerHTML = `<ellipse cx="${realWidth + halfBorder}" cy="${realHeight + halfBorder}" rx="${realWidth}" ry="${realHeight}" stroke-width="${borderWidth}" stroke="${strokeColor}" fill="none"></ellipse>`;
+      svg.innerHTML = innerHTML;
+      document.body.appendChild(svg);
+    }
+    window.onload = function () {
+      createPolyGon({
+        SvgHeight: 90,
+        SvgBorderWidth: 3,
+        strokeColor: "#01effb"
+      });
+      createPolyGon({
+        SvgHeight: 76,
+        SvgBorderWidth: 4,
+        strokeColor: "#00effe"
+      });
+      createBkgSvg();
+      createBkgSvg({ height: 124, width: 480 })
+    }
+  </script>
 </head>
 
 <body>
-  <svg width="106" height="92" viewBox="0 0 106 92">
-    <defs>
-      <clipPath id="aaa">
-        <path d="M25,0h50l25,43l-25,43h-50l-25-43L25,0" stroke="red" stroke-width="6" fill="none"
-          style="transform:translate(3px,3px);" stroke-linecap="round"></path>
-      </clipPath>
-    </defs>
-  </svg>
-  <div class="center">
-    <div class="box">
-      <div class="tray_list">
-        <div class="tray_item">
-          <div class="polygon">
-            <div class="cnt"></div>
+  <div class="wrapper">
+    <div class="window">
+      <div class="content">
+        <div class="round-pillar"></div>
+        <div class="tray"></div>
+        <div class="round-circle">
+          <div class="round-box">
+            <div class="animation">
+              <div class="round-jo">
+                <div class="round-inner">
+                  <div class="innner-reverse">
+                    <div class="polygon">
+                      <div class="polygon-image">
+                        <div class="poly-icon"></div>
+                      </div>
+                    </div>
+                    <div class="text">感知</div>
+                  </div>
+                </div>
+              </div>
+              <div class="round-jo">
+                <div class="round-inner">
+                  <div class="innner-reverse">
+                    <div class="polygon">
+                      <div class="polygon-image">
+                        <div class="poly-icon"></div>
+                      </div>
+                    </div>
+                    <div class="text">AR</div>
+                  </div>
+                </div>
+              </div>
+              <div class="round-jo">
+                <div class="round-inner">
+                  <div class="innner-reverse">
+                    <div class="polygon">
+                      <div class="polygon-image">
+                        <div class="poly-icon"></div>
+                      </div>
+                    </div>
+                    <div class="text">警情</div>
+                  </div>
+                </div>
+              </div>
+              <div class="round-jo">
+                <div class="round-inner">
+                  <div class="innner-reverse">
+                    <div class="polygon">
+                      <div class="polygon-image">
+                        <div class="poly-icon"></div>
+                      </div>
+                    </div>
+                    <div class="text">数据</div>
+                  </div>
+                </div>
+              </div>
+              <div class="round-jo">
+                <div class="round-inner">
+                  <div class="innner-reverse">
+                    <div class="polygon">
+                      <div class="polygon-image">
+                        <div class="poly-icon"></div>
+                      </div>
+                    </div>
+                    <div class="text">智能</div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="tray_item">
-          <div class="polygon">
-            <div class="cnt"></div>
-          </div>
-        </div>
-        <div class="tray_item">
-          <div class="polygon">
-            <div class="cnt"></div>
-          </div>
-        </div>
-        <div class="tray_item">
-          <div class="polygon">
-            =<div class="cnt"></div>
-          </div>
-        </div>
-        <div class="tray_item">
-          <div class="polygon">
-            <div class="cnt"></div>
+        <div class="map-area">
+          <div class="map-wrapper">
+            <div class="map-div">
+              <div class="map-center">
+                <div class="map"></div>
+                <div class="map-name">松江区</div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
+      <div class="polygon-bkg"></div>
+      <div class="polygon-bkg2"></div>
     </div>
   </div>
 </body>
